--- a/rtr4.config
+++ b/rtr4.config
@@ -21,6 +21,8 @@ vrf definition GS
  !
  address-family ipv4
  exit-address-family
+ 
+ 
 !
 logging persistent size 1000000 filesize 8192 immediate
 !
@@ -186,6 +188,10 @@ interface Tunnel0
  ip tcp adjust-mss 1360
  tunnel source GigabitEthernet1
  tunnel destination 13.55.4.247
+!
+!
+interface Tunnel1
+ ip address 10.101.102.4 255.255.255.0
 !
 interface VirtualPortGroup0
  vrf forwarding GS
