--- a/rtr4.config
+++ b/rtr4.config
@@ -193,6 +193,10 @@ interface Tunnel0
 interface Tunnel1
  ip address 10.101.102.4 255.255.255.0
 !
+!
+interface Tunnel2
+ ip address 10.101.103.4 255.255.255.0
+!
 interface VirtualPortGroup0
  vrf forwarding GS
  ip address 192.168.35.101 255.255.255.0
