--- a/rtr4.config
+++ b/rtr4.config
@@ -197,6 +197,10 @@ interface Tunnel1
 interface Tunnel2
  ip address 10.101.103.4 255.255.255.0
 !
+!
+interface Tunnel3
+ ip address 10.101.104.4 255.255.255.0
+!
 interface VirtualPortGroup0
  vrf forwarding GS
  ip address 192.168.35.101 255.255.255.0
