update-rtr-config

--- a/rtr4.config
+++ b/rtr4.config
@@ -1,5 +1,6 @@
+
 !
-! Last configuration change at 01:41:02 UTC Mon Mar 4 2019 by ec2-user
+! Last configuration change at 06:50:54 UTC Wed Mar 13 2019 by ec2-user
 !
 version 16.10
 service timestamps debug datetime msec
@@ -21,8 +22,6 @@ vrf definition GS
  !
  address-family ipv4
  exit-address-family
- 
- 
 !
 logging persistent size 1000000 filesize 8192 immediate
 !
@@ -111,7 +110,7 @@ crypto pki certificate chain TP-self-signed-2071020183
   2A4656E2 F371A2D2 1D1A460D EAF531C8 563BE7F1 816F4E96 F2227723 3DF42E87 
   4F5DD032 CFACFBF7 EB8DD96D 888A9342 B166229D 6BF23E09 2507B5B6 64362511 
   383E9BC3 7AE264F9 1296B136 8BE12CEE C1F6A2EC
-        quit
+  	quit
 crypto pki certificate chain SLA-TrustPoint
  certificate ca 01
   30820321 30820209 A0030201 02020101 300D0609 2A864886 F70D0101 0B050030 
@@ -140,7 +139,7 @@ crypto pki certificate chain SLA-TrustPoint
   80DDCD16 D6BACECA EEBC7CF9 8428787B 35202CDC 60E4616A B623CDBD 230E3AFB 
   418616A9 4093E049 4D10AB75 27E86F73 932E35B5 8862FDAE 0275156F 719BB2F0 
   D697DF7F 28
-        quit
+  	quit
 !
 license udi pid CSR1000V sn 9YP6JHVE2TO
 diagnostic bootup level minimal
@@ -152,7 +151,6 @@ spanning-tree extend system-id
 username ec2-user privilege 15 secret 9 $9$Wy5R6khW0hzUJ.$qYQVdBNwz.AhgsHZcTuNBeQFn4p0Pv5jeA0IGmETcEk
 !
 redundancy
-!
 !
 !
 !
@@ -189,17 +187,11 @@ interface Tunnel0
  tunnel source GigabitEthernet1
  tunnel destination 13.55.4.247
 !
-!
-interface Tunnel1
- ip address 10.101.102.4 255.255.255.0
-!
-!
 interface Tunnel2
- ip address 10.101.103.4 255.255.255.0
+ no ip address
 !
-!
-interface Tunnel3
- ip address 10.101.104.4 255.255.255.0
+interface Tunnel4
+ no ip address
 !
 interface VirtualPortGroup0
  vrf forwarding GS
@@ -207,7 +199,6 @@ interface VirtualPortGroup0
  ip nat inside
  no mop enabled
  no mop sysid
-!
 !
 interface GigabitEthernet1
  ip address dhcp
@@ -224,7 +215,6 @@ router ospf 1
 !
 iox
 ip forward-protocol nd
-!
 ip tcp window-size 8192
 ip http server
 ip http authentication local
@@ -245,6 +235,7 @@ ip access-list standard GS_NAT_ACL
  permit 192.168.35.0 0.0.0.255
 !
 !
+snmp-server community ansible-public RO
 !
 !
 control-plane
@@ -270,3 +261,4 @@ app-hosting appid guestshell
   guest-ipaddress 192.168.35.102 netmask 255.255.255.0
  app-default-gateway 192.168.35.101 guest-interface 0
  name-server0 8.8.8.8
+end
