--- a/rtr4.config
+++ b/rtr4.config
@@ -181,9 +181,9 @@ interface Loopback1
 !
 interface Tunnel0
  ip address 10.101.101.4 255.255.255.0
- ip mtu 1476
+ ip mtu 15000
  ip tcp adjust-mss 1360
- tunnel source GigabitEthernet1
+ tunnehhl source GigabitEthernet1
  tunnel destination 13.55.4.247
 !
 interface Tunnel2
