--- a/rtr4.config
+++ b/rtr4.config
@@ -1,5 +1,6 @@
+
 !
-! Last configuration change at 11:37:38 UTC Tue Mar 12 2019 by ec2-user
+! Last configuration change at 05:03:23 UTC Tue Apr 2 2019 by ec2-user
 !
 version 16.10
 service timestamps debug datetime msec
@@ -70,45 +71,45 @@ multilink bundle-name authenticated
 !
 !
 !
-crypto pki trustpoint TP-self-signed-2071020183
+crypto pki trustpoint TP-self-signed-4213351170
  enrollment selfsigned
- subject-name cn=IOS-Self-Signed-Certificate-2071020183
+ subject-name cn=IOS-Self-Signed-Certificate-4213351170
  revocation-check none
- rsakeypair TP-self-signed-2071020183
+ rsakeypair TP-self-signed-4213351170
 !
 crypto pki trustpoint SLA-TrustPoint
  enrollment pkcs12
  revocation-check crl
 !
 !
-crypto pki certificate chain TP-self-signed-2071020183
+crypto pki certificate chain TP-self-signed-4213351170
  certificate self-signed 01
   30820330 30820218 A0030201 02020101 300D0609 2A864886 F70D0101 05050030 
   31312F30 2D060355 04031326 494F532D 53656C66 2D536967 6E65642D 43657274 
-  69666963 6174652D 32303731 30323031 3833301E 170D3139 30333034 30313333 
-  32375A17 0D333030 31303130 30303030 305A3031 312F302D 06035504 03132649 
-  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D32 30373130 
-  32303138 33308201 22300D06 092A8648 86F70D01 01010500 0382010F 00308201 
-  0A028201 0100B626 7C358CD9 84C74ED7 48EE4B5C 076D73A3 A6CDB95D E5FC8A7E 
-  CAD00492 5F3104E1 0FD1F909 491171F0 7AC8AB63 5BC70233 C75F0D84 F91781BA 
-  FA85F4FF E6F6D270 04FC4C3A AE6B687E 01C9F60F 370C9ED4 9E641701 E4172BB8 
-  C4EA2A78 7E502B5C EF94DAC7 34D9C04B 8D5D80AF 120EDFE3 25079C10 2B425766 
-  345C05AD FA56B192 609D553D B7CF2228 2CFB75B2 607F2A66 C5A67B77 E66333BA 
-  94D8A0E9 D6D5236C 2CB7C6CA 5C7E0806 C9A2B2F9 C331AC4F 6D915079 D45ED43F 
-  22934DDE CE21B49D D97D86F6 5CE07826 4EFB4A56 B4423352 099E3ABE 72206866 
-  A6D05BCA A1B85377 18BB3DF5 07EB95BE 793D4049 C2F2E0ED 1136AB2B 91A8746A 
-  683FDAD6 CC710203 010001A3 53305130 0F060355 1D130101 FF040530 030101FF 
-  301F0603 551D2304 18301680 1422AE18 6EC0CB5A 33941C4A EE4DE04D E3B335F7 
-  4B301D06 03551D0E 04160414 22AE186E C0CB5A33 941C4AEE 4DE04DE3 B335F74B 
-  300D0609 2A864886 F70D0101 05050003 82010100 B5E8EE74 9AD56AB1 79EA2B7E 
-  22F510CA 3EB0CE73 781D89DE 11213F25 BDEBBE1B E7BE4036 ECFEC047 5C871B22 
-  A709BAC8 D3E7E834 2F5F411D BCB80B98 BBDD59CD EB4B4480 3F7717FA 5BAF2024 
-  244A71EF ED07F32E 1344B537 E347DACC 11F9C0DF 36CD0764 A507AF87 DC6245FC 
-  4C2740BC ED754445 591FEE98 B80AA945 D4D1202E 2CFCFEDC C76E306E 58A862D8 
-  B51FFC4C 26A16BA0 ADD7B223 25768BF4 1E8CC75C 89AE2E09 852D612F 5822E3AB 
-  2A4656E2 F371A2D2 1D1A460D EAF531C8 563BE7F1 816F4E96 F2227723 3DF42E87 
-  4F5DD032 CFACFBF7 EB8DD96D 888A9342 B166229D 6BF23E09 2507B5B6 64362511 
-  383E9BC3 7AE264F9 1296B136 8BE12CEE C1F6A2EC
+  69666963 6174652D 34323133 33353131 3730301E 170D3139 30343032 30333138 
+  33375A17 0D333030 31303130 30303030 305A3031 312F302D 06035504 03132649 
+  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D34 32313333 
+  35313137 30308201 22300D06 092A8648 86F70D01 01010500 0382010F 00308201 
+  0A028201 0100E66B 620459DB 78145593 6E000F87 7444C628 10F1EA7F 9CE90787 
+  09405403 2ECE0806 4577AF8E 627A8C55 5777E552 CCD2C8F2 7AF72808 1F8527C6 
+  AB4F4751 DD8B4DD0 F406DAB3 61CDAE64 8B14C6B4 A8E8ABAC 8C706108 90C23517 
+  AD6B65A8 0A99B5DB 53FFA84E 28DFAEB9 F72E7A84 4F462B89 03395F81 5A1CE663 
+  1ACF21E3 B30460CC F1DF34D8 9967C0AD 1DB112F3 B687C8A4 52AFE20E 3A5DBA9E 
+  79A9FD6B D90EF09A 42FCA0C6 870F05CF 9101DDC9 DA1A68CF BC6CB5B0 6C91B3E3 
+  C63D475D 5D6912E6 0B30941F D2923CA3 155716EE 0EE85422 815E2D88 A07DDA39 
+  2392A5A1 6A419BE0 D52995CD 141AC962 C0D17D1E 83874EFD 25634D1E 7381B0B8 
+  38FD923D 21A50203 010001A3 53305130 0F060355 1D130101 FF040530 030101FF 
+  301F0603 551D2304 18301680 14864192 C94F366C 0399A910 0D27227A 8E6C8633 
+  D0301D06 03551D0E 04160414 864192C9 4F366C03 99A9100D 27227A8E 6C8633D0 
+  300D0609 2A864886 F70D0101 05050003 82010100 624924AB B8F7651A AC0313EC 
+  7D85F7AF 46AE8F83 1196E11E F60852A9 A7D9E4D2 77149898 7B87B309 7DF51C49 
+  33D70805 8720F3F0 DCD23646 64C09385 F8AEE6E0 29CC926E 7483CF75 15700F80 
+  2E7FB25E EFCA4C7E AA8BD1FD C51A2071 E462B9B5 265F2B6D 87C07B66 2738341F 
+  B7E57D34 63558624 02DF7908 55026FAD 35B72ECF 1E9A3F29 8C0A214E E53FD59C 
+  8A52086D 229A19CE AA96EDB8 7ED45DA6 39002224 8F798748 47EEBB5B F9A8A20E 
+  8A7B2714 931756C6 BF45A8BA 98DB5E61 0EDC0ECC C644B0BA 08A7853C BB58FAFF 
+  FD400F7E F7983B62 E25CDC24 C5E2BDC0 6F81F119 D05D4199 19A76A53 8329247C 
+  2F6F15A0 8B9D13A9 7BD58F58 7407A0DE 7733C458
   	quit
 crypto pki certificate chain SLA-TrustPoint
  certificate ca 01
@@ -140,14 +141,14 @@ crypto pki certificate chain SLA-TrustPoint
   D697DF7F 28
   	quit
 !
-license udi pid CSR1000V sn 9YP6JHVE2TO
+license udi pid CSR1000V sn 92L58OSPJ0V
 diagnostic bootup level minimal
 !
 spanning-tree extend system-id
 !
 !
 !
-username ec2-user privilege 15 secret 9 $9$Wy5R6khW0hzUJ.$qYQVdBNwz.AhgsHZcTuNBeQFn4p0Pv5jeA0IGmETcEk
+username ec2-user privilege 15 secret 9 $9$YKuabF91mL2LIU$.KpBOd4IitNAAs1ZejU5dp63F/3rpl92N31jAvkaYfc
 !
 redundancy
 !
@@ -184,13 +185,7 @@ interface Tunnel0
  ip mtu 1476
  ip tcp adjust-mss 1360
  tunnel source GigabitEthernet1
- tunnel destination 13.55.4.247
-!
-interface Tunnel2
- no ip address
-!
-interface Tunnel4
- no ip address
+ tunnel destination 13.236.70.18
 !
 interface VirtualPortGroup0
  vrf forwarding GS
@@ -198,7 +193,6 @@ interface VirtualPortGroup0
  ip nat inside
  no mop enabled
  no mop sysid
-!
 !
 interface GigabitEthernet1
  ip address dhcp
@@ -227,7 +221,7 @@ ip ssh rsa keypair-name ssh-key
 ip ssh version 2
 ip ssh pubkey-chain
   username ec2-user
-   key-hash ssh-rsa 8F32F648C7258800E71EA3AF9839551A ec2-user
+   key-hash ssh-rsa 546F2578DA244C0C1CEA925B99D06F69 ec2-user
 ip scp server enable
 !
 !
@@ -235,7 +229,6 @@ ip access-list standard GS_NAT_ACL
  permit 192.168.35.0 0.0.0.255
 !
 !
-snmp-server community ansible-public RO
 !
 !
 control-plane
