--- a/rtr3.config
+++ b/rtr3.config
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 05:03:23 UTC Tue Apr 2 2019 by ec2-user
+! Last configuration change at 00:50:30 UTC Mon May 6 2019 by ec2-user
 !
 version 16.10
 service timestamps debug datetime msec
@@ -71,45 +71,45 @@ multilink bundle-name authenticated
 !
 !
 !
-crypto pki trustpoint TP-self-signed-3466172143
+crypto pki trustpoint TP-self-signed-3006434116
  enrollment selfsigned
- subject-name cn=IOS-Self-Signed-Certificate-3466172143
+ subject-name cn=IOS-Self-Signed-Certificate-3006434116
  revocation-check none
- rsakeypair TP-self-signed-3466172143
+ rsakeypair TP-self-signed-3006434116
 !
 crypto pki trustpoint SLA-TrustPoint
  enrollment pkcs12
  revocation-check crl
 !
 !
-crypto pki certificate chain TP-self-signed-3466172143
+crypto pki certificate chain TP-self-signed-3006434116
  certificate self-signed 01
   30820330 30820218 A0030201 02020101 300D0609 2A864886 F70D0101 05050030 
   31312F30 2D060355 04031326 494F532D 53656C66 2D536967 6E65642D 43657274 
-  69666963 6174652D 33343636 31373231 3433301E 170D3139 30343032 30333137 
-  35385A17 0D333030 31303130 30303030 305A3031 312F302D 06035504 03132649 
-  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D33 34363631 
-  37323134 33308201 22300D06 092A8648 86F70D01 01010500 0382010F 00308201 
-  0A028201 01009634 81A15ADE 11604B53 B586D726 868FE63E E4CA9193 DA10A1C2 
-  B6B750C2 348AC7A1 5CA58F56 8950E461 354FA9ED 5987B28A 3281E54D FF812F91 
-  AD5413DE BC30362F 4AAED9E9 9D3874CD A1FAE51C 3AFD9CFF AF296F2B 38FA0AA3 
-  3AA45620 1BD3F9FF B63D1A7E CAE89DC0 5103C014 23F572BE A11D248E 18BC37F0 
-  5240B43B 4D7AF97D A7CBC0E9 2DD7A2D8 C4DF1230 591EDC5F BB04203A FC54B6DB 
-  3A7A1545 4CC5D40B 22C30827 4D399267 E89E73C8 37E9FF10 1C54DF4F 5A9E0B11 
-  55F51EA9 18EA4D91 B76EF542 6607D9DB 309EDDF3 407DC811 404F8AED D7A00F33 
-  B5B95A86 63CA78AE 30894763 8F5B2105 49785DA1 C5F3E7E6 118CA68E F1D6EF34 
-  D9092251 C6510203 010001A3 53305130 0F060355 1D130101 FF040530 030101FF 
-  301F0603 551D2304 18301680 149AD39B AF91CFBF 21B45E5C 1A5984D5 A54C616F 
-  9E301D06 03551D0E 04160414 9AD39BAF 91CFBF21 B45E5C1A 5984D5A5 4C616F9E 
-  300D0609 2A864886 F70D0101 05050003 82010100 33E81A0F 28354491 EA5E5C17 
-  F7608DFE 665E05E5 EBCE2D83 35A21C07 1857EC9D 1699D0B9 8CE78389 641A8672 
-  1F093E30 6BF0AAAA 09D26134 6DBDD4AC 1441F568 2607BB85 351A6ED8 A405F83F 
-  073132AD F0105F6C 359A582F EF2BFF5B FBB8FBA3 75208923 B751F400 1BF94678 
-  2CBF459E A49710D1 4AFF16D0 1A59868B 47EEFAC0 816FF7C7 CF2AA3DC 474BB413 
-  14E80B06 CC6C960B 9AD2A8FA A8D30406 4B450C7A 5C7FA5B0 EA6DA3DC 2266F2D5 
-  966E92BF 34C7D2F1 D74E4C52 FFAB442C 52CEBA3C 65780C9E A8BD92AD 178CBF74 
-  DE3F2CA1 C9A86E0D F73CA012 E5784289 99210E40 5A6D2ACB A4E1B775 11850AE6 
-  26CE547E 814FFD46 C91F279C 0D396BE2 D4A53470
+  69666963 6174652D 33303036 34333431 3136301E 170D3139 30353036 30303338 
+  31375A17 0D333030 31303130 30303030 305A3031 312F302D 06035504 03132649 
+  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D33 30303634 
+  33343131 36308201 22300D06 092A8648 86F70D01 01010500 0382010F 00308201 
+  0A028201 0100BAD2 09A772CD A1229EDE DFE540D3 1FAE9C9A 0CDB5587 FD9717C8 
+  0088B0DA 975478FE 824E6B93 4DACB71A 4E483384 085771E3 8BF40C8D C8F7AE6B 
+  C10D96EC 6389379C 3DF60052 8285CA93 A900B2AA D1F53C39 2061B424 13AB9DF8 
+  335C3B93 810E8358 46F3BD23 6213AEC4 2B0F3CFB D908428F 48D8C640 B482F957 
+  11F545FF C7105148 F5660BC7 E15557A1 A46BD0B0 385230DD FBE56B1C 6D0AC30A 
+  A5A6142B 10375FEE EE818074 52B91504 B029163A 99A40F95 6BFE1B98 BEF0D786 
+  66550FF8 EDB3FEC7 42E725A5 14A99106 64569A21 77C44E66 4CF7AF70 685F53FB 
+  1D30DDE4 795C46C0 FFB3741A 02B833E6 8E6078CA 66F0211C 36BD6897 5F840CA2 
+  947AB557 31AF0203 010001A3 53305130 0F060355 1D130101 FF040530 030101FF 
+  301F0603 551D2304 18301680 14ED6AFD E5837188 A16936B9 4EB1F3BF 047DBABA 
+  90301D06 03551D0E 04160414 ED6AFDE5 837188A1 6936B94E B1F3BF04 7DBABA90 
+  300D0609 2A864886 F70D0101 05050003 82010100 1E70CF5C A0BB8891 D64675EA 
+  E6BD3E70 96DFE1E8 46091BD5 0E8E3E12 D2FBFD1F 12872CBA F4172ABD 61FBE542 
+  F6F0C56A 0326804D 0D72FD29 EF9A8394 34DC931E 419841EC 038ED71A 4213BC5C 
+  E1C3F8A0 9B71DB32 FA9C33DD 333BEC97 869EDD6B 15C1DC91 8B7B1A60 A13634F7 
+  495E9969 A4C385F0 9C96C629 236A7F0C E5FB91AA D4D47752 E4E54A57 CB2BA9AD 
+  E26031D2 57DCAEC1 5207255D 4D20BF7F 780561C5 833F584D 046541AB 3132BC35 
+  A8C59929 9F311607 A65F84EE 25795688 2C2A82FB 6F6D949B 27B69898 1E6E8849 
+  BD08FAA7 DC14C35B 58944F2C B2ED51B0 AB40B4D2 60E95044 2FCBBDAB 9EF1DB4A 
+  D57B51D0 9001944A 03A569E2 10A77275 A141B6D8
   	quit
 crypto pki certificate chain SLA-TrustPoint
  certificate ca 01
@@ -141,14 +141,14 @@ crypto pki certificate chain SLA-TrustPoint
   D697DF7F 28
   	quit
 !
-license udi pid CSR1000V sn 98XGQG3DHS6
+license udi pid CSR1000V sn 93UW5W7O5MX
 diagnostic bootup level minimal
 !
 spanning-tree extend system-id
 !
 !
 !
-username ec2-user privilege 15 secret 9 $9$UUYx9qcos5EazE$iPyGjEyTtVi9uB265cPjBxsucCjCF/VbiG4Rya679uM
+username ec2-user privilege 15 secret 9 $9$WDhTq2JlaV54aE$s8LrALHHLRPY9agwFFwuisdEwonf0j3NEv.gv2x1wOY
 !
 redundancy
 !
@@ -182,10 +182,10 @@ interface Loopback1
 !
 interface Tunnel0
  ip address 10.100.100.3 255.255.255.0
- ip mtu 2312
+ ip mtu 1476
  ip tcp adjust-mss 1360
  tunnel source GigabitEthernet1
- tunnel destination 13.239.39.173
+ tunnel destination 54.254.146.4
 !
 interface VirtualPortGroup0
  vrf forwarding GS
@@ -221,7 +221,7 @@ ip ssh rsa keypair-name ssh-key
 ip ssh version 2
 ip ssh pubkey-chain
   username ec2-user
-   key-hash ssh-rsa 546F2578DA244C0C1CEA925B99D06F69 ec2-user
+   key-hash ssh-rsa 2B168A840A881C7BFD16FAC82693C89E ec2-user
 ip scp server enable
 !
 !
@@ -254,4 +254,3 @@ app-hosting appid guestshell
   guest-ipaddress 192.168.35.102 netmask 255.255.255.0
  app-default-gateway 192.168.35.101 guest-interface 0
  name-server0 8.8.8.8
-end
