--- a/rtr3.config
+++ b/rtr3.config
@@ -1,4 +1,3 @@
-
 !
 ! Last configuration change at 00:50:30 UTC Mon May 6 2019 by ec2-user
 !
@@ -226,7 +225,7 @@ ip scp server enable
 !
 !
 ip access-list standard GS_NAT_ACL
- permit 172.168.35.0 0.0.0.255
+ permit 192.168.35.0 0.0.0.255
 !
 !
 !
@@ -254,3 +253,4 @@ app-hosting appid guestshell
   guest-ipaddress 192.168.35.102 netmask 255.255.255.0
  app-default-gateway 192.168.35.101 guest-interface 0
  name-server0 8.8.8.8
+end
