--- a/rtr3.config
+++ b/rtr3.config
@@ -1,5 +1,6 @@
+
 !
-! Last configuration change at 00:50:30 UTC Mon May 6 2019 by ec2-user
+! Last configuration change at 04:23:19 UTC Mon May 6 2019 by ec2-user
 !
 version 16.10
 service timestamps debug datetime msec
@@ -70,45 +71,45 @@ multilink bundle-name authenticated
 !
 !
 !
-crypto pki trustpoint TP-self-signed-3006434116
+crypto pki trustpoint TP-self-signed-3494018025
  enrollment selfsigned
- subject-name cn=IOS-Self-Signed-Certificate-3006434116
+ subject-name cn=IOS-Self-Signed-Certificate-3494018025
  revocation-check none
- rsakeypair TP-self-signed-3006434116
+ rsakeypair TP-self-signed-3494018025
 !
 crypto pki trustpoint SLA-TrustPoint
  enrollment pkcs12
  revocation-check crl
 !
 !
-crypto pki certificate chain TP-self-signed-3006434116
+crypto pki certificate chain TP-self-signed-3494018025
  certificate self-signed 01
   30820330 30820218 A0030201 02020101 300D0609 2A864886 F70D0101 05050030 
   31312F30 2D060355 04031326 494F532D 53656C66 2D536967 6E65642D 43657274 
-  69666963 6174652D 33303036 34333431 3136301E 170D3139 30353036 30303338 
-  31375A17 0D333030 31303130 30303030 305A3031 312F302D 06035504 03132649 
-  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D33 30303634 
-  33343131 36308201 22300D06 092A8648 86F70D01 01010500 0382010F 00308201 
-  0A028201 0100BAD2 09A772CD A1229EDE DFE540D3 1FAE9C9A 0CDB5587 FD9717C8 
-  0088B0DA 975478FE 824E6B93 4DACB71A 4E483384 085771E3 8BF40C8D C8F7AE6B 
-  C10D96EC 6389379C 3DF60052 8285CA93 A900B2AA D1F53C39 2061B424 13AB9DF8 
-  335C3B93 810E8358 46F3BD23 6213AEC4 2B0F3CFB D908428F 48D8C640 B482F957 
-  11F545FF C7105148 F5660BC7 E15557A1 A46BD0B0 385230DD FBE56B1C 6D0AC30A 
-  A5A6142B 10375FEE EE818074 52B91504 B029163A 99A40F95 6BFE1B98 BEF0D786 
-  66550FF8 EDB3FEC7 42E725A5 14A99106 64569A21 77C44E66 4CF7AF70 685F53FB 
-  1D30DDE4 795C46C0 FFB3741A 02B833E6 8E6078CA 66F0211C 36BD6897 5F840CA2 
-  947AB557 31AF0203 010001A3 53305130 0F060355 1D130101 FF040530 030101FF 
-  301F0603 551D2304 18301680 14ED6AFD E5837188 A16936B9 4EB1F3BF 047DBABA 
-  90301D06 03551D0E 04160414 ED6AFDE5 837188A1 6936B94E B1F3BF04 7DBABA90 
-  300D0609 2A864886 F70D0101 05050003 82010100 1E70CF5C A0BB8891 D64675EA 
-  E6BD3E70 96DFE1E8 46091BD5 0E8E3E12 D2FBFD1F 12872CBA F4172ABD 61FBE542 
-  F6F0C56A 0326804D 0D72FD29 EF9A8394 34DC931E 419841EC 038ED71A 4213BC5C 
-  E1C3F8A0 9B71DB32 FA9C33DD 333BEC97 869EDD6B 15C1DC91 8B7B1A60 A13634F7 
-  495E9969 A4C385F0 9C96C629 236A7F0C E5FB91AA D4D47752 E4E54A57 CB2BA9AD 
-  E26031D2 57DCAEC1 5207255D 4D20BF7F 780561C5 833F584D 046541AB 3132BC35 
-  A8C59929 9F311607 A65F84EE 25795688 2C2A82FB 6F6D949B 27B69898 1E6E8849 
-  BD08FAA7 DC14C35B 58944F2C B2ED51B0 AB40B4D2 60E95044 2FCBBDAB 9EF1DB4A 
-  D57B51D0 9001944A 03A569E2 10A77275 A141B6D8
+  69666963 6174652D 33343934 30313830 3235301E 170D3139 30353036 30343134 
+  31335A17 0D333030 31303130 30303030 305A3031 312F302D 06035504 03132649 
+  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D33 34393430 
+  31383032 35308201 22300D06 092A8648 86F70D01 01010500 0382010F 00308201 
+  0A028201 010093BC 814323E3 B9DF5650 635330F7 C917DBCF 5EA68ADF 906D2EF7 
+  EB2E6689 69334CB4 79599F58 72BE302E 68256991 70A9CD00 68179B3B A1F84838 
+  4D59A706 D3A764D6 41C4FEBD 46C3B505 781CA8A0 AF70A591 69294196 4F815E0D 
+  5BB1AE8C 1B706602 68C5647E A50F7655 0BB83197 F7F1AB30 83EF3A80 2A65B42E 
+  83F33D2A 13D522E8 6C5677FA 8F500026 6AB5F406 06220AEC 9F83CC1F 071337EC 
+  6AB5C940 D350C82A 43F751FA A46C146F F13698D1 812962EB D62C696B 8112D9BC 
+  97C56974 EAD524BB 01CCBD5F 5C2AC924 B034AC9A FC78D50E 817A9D2E 19A21B58 
+  83D9DC09 C9E80D9D A820CA7E 73FA3B72 4359505B 68A4ED05 E1B35366 F3686915 
+  08EEDA70 0CCB0203 010001A3 53305130 0F060355 1D130101 FF040530 030101FF 
+  301F0603 551D2304 18301680 143A82FC 820C83FE 99D94344 DAC4AB34 5036753E 
+  64301D06 03551D0E 04160414 3A82FC82 0C83FE99 D94344DA C4AB3450 36753E64 
+  300D0609 2A864886 F70D0101 05050003 82010100 5C02A09C 630802A7 87151D3F 
+  1814C9FE 734B9954 A7DA78D7 E2AD52F5 4AC86CCB AFB08E42 5D771EB1 4F765163 
+  5EE68952 2B09A11C 3B0195EC 29392EC8 AF1F2C0F 5BE56D96 BCE42E6E 8DEED6D8 
+  C350CD2D 1FE20C77 CACEC4B1 1A675725 AE05EAE7 52CE1DC0 EC249C94 CBF98228 
+  E523CC1B 53824EEA 1153F134 D4B211B5 8FB7DF7A B42609BF F0EA9582 E1ED4476 
+  842A29A5 B292F14C 8A4D9A70 41AA9578 7CB0FDD1 179A799F F50A20C7 F582304E 
+  CDE2F457 7806B718 5E1E62A0 5F614257 EEE0FDD3 A58CB5A6 8813CB35 450423F1 
+  A3C2063C A0E5CDA5 067D4304 136ADFF9 3DB6E259 17D0287F 9EE07F46 AA1CE3E8 
+  C8DCD79C 7C2F6DE8 A5B4B659 F7D99E0C 47820FC6
   	quit
 crypto pki certificate chain SLA-TrustPoint
  certificate ca 01
@@ -140,14 +141,14 @@ crypto pki certificate chain SLA-TrustPoint
   D697DF7F 28
   	quit
 !
-license udi pid CSR1000V sn 93UW5W7O5MX
+license udi pid CSR1000V sn 90BCS1CNP04
 diagnostic bootup level minimal
 !
 spanning-tree extend system-id
 !
 !
 !
-username ec2-user privilege 15 secret 9 $9$WDhTq2JlaV54aE$s8LrALHHLRPY9agwFFwuisdEwonf0j3NEv.gv2x1wOY
+username ec2-user privilege 15 secret 9 $9$.fHOTDufJMBl9.$4vGH4kcc850LjVgR.4br5KVdbs/emXwljXF9S86yCX6
 !
 redundancy
 !
@@ -181,10 +182,10 @@ interface Loopback1
 !
 interface Tunnel0
  ip address 10.100.100.3 255.255.255.0
- ip mtu 2140
+ ip mtu 1476
  ip tcp adjust-mss 1360
  tunnel source GigabitEthernet1
- tunnel destination 54.254.146.4
+ tunnel destination 13.236.80.43
 !
 interface VirtualPortGroup0
  vrf forwarding GS
@@ -220,7 +221,7 @@ ip ssh rsa keypair-name ssh-key
 ip ssh version 2
 ip ssh pubkey-chain
   username ec2-user
-   key-hash ssh-rsa 2B168A840A881C7BFD16FAC82693C89E ec2-user
+   key-hash ssh-rsa 6A7E5528B7BB4E62716241DACEDA2151 ec2-user
 ip scp server enable
 !
 !
